Saving WeatherPy finished work

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -2009,7 +2009,9 @@
     "**Discussion about the linear relationship:** \n",
     "The regression line models the relation between the latitude and wind speed.  \n",
     "\n",
-    "The Northern Hemisphere has an r-value near 0, indicating that there is no relationship between latitude and wind speed.  The Southern Hemisphere has an r-value of -0.4, indicating a weak to moderate negative correlation between latitude and wind speed.  As such, there are other factors that are impacting wind speed beyond latitude.  Both plots indicate that most wind speeds across the whole domain fluctuate between 0 and 8 m/s.  Both plots have a couple of locations having wind speeds greater than 10 m/s at locations "
+    "The Northern Hemisphere has an r-value near 0, indicating that there is no relationship between latitude and wind speed.  The Southern Hemisphere has an r-value of -0.4, indicating a weak to moderate negative correlation between latitude and wind speed.  As such, there are other factors that are impacting wind speed beyond latitude.  Both plots indicate that most wind speeds across the whole domain fluctuate between 0 and 8 m/s.  \n",
+    "\n",
+    "Both plots have a couple of locations having wind speeds greater than 10 m/s at locations 40-60 degrees from the equator.  There is only one other location across either graph with wind speeds greater than 10 m/s, at near 10 degrees latitude in the Northern Hemisphere."
    ]
   },
   {
